--- a/ProjectTask/package.json
+++ b/ProjectTask/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "ag-grid-angular": "^23.1.0",
+    "ag-grid-community": "^23.1.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
